# skygfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_dll.cmd
example/: main.cpp
examples/: CMakeLists.txt  build.sh  main.cpp
examples/00_tests/: main.cpp
examples/01_triangle/: main.cpp
examples/02_uniform/: main.cpp
examples/03_texture/: main.cpp
examples/04_texture_mipmap/: main.cpp
examples/05_cube/: main.cpp
examples/06_textured_cube/: main.cpp
examples/07_light/: main.cpp
examples/08_render_target/: main.cpp
examples/09_imgui/: main.cpp
examples/09_multiple_vertex_buffers/: main.cpp
examples/10_bloom/: main.cpp
examples/10_instancing/: main.cpp
examples/11_imgui/: main.cpp
examples/11_raytraced_triangle/: main.cpp
examples/11_raytracing_triangle/: main.cpp
examples/12_bloom/: main.cpp
examples/12_raytraced_cube/: main.cpp
examples/13_raytraced_shadows/: main.cpp
examples/14_mesh_api_triangle/: main.cpp
examples/14_raytraced_cube/: main.cpp
examples/15_multiple_vertex_buffers/: main.cpp
examples/15_raytraced_shadows/: main.cpp
examples/16_instancing/: main.cpp
examples/16_scratch_api_triangle/: main.cpp
examples/cube/: main.cpp
examples/light/: main.cpp
examples/render_target/: main.cpp
examples/scripts/: build_mac.sh  build_win.cmd
examples/texture/: main.cpp
examples/texture_mipmap/: main.cpp
examples/textured_cube/: main.cpp
examples/triangle/: main.cpp
examples/uniform/: main.cpp
examples/utils/: imgui_helper.cpp  imgui_helper.h  utils.h
lib/d3dx12/: d3d12generatemips.cpp
lib/d3dx12/d3dx12/: GenerateMips_main.inc  d3d12generatemips.cpp  d3d12generatemips.h
lib/glslang/glslang/SPIRV/: SpvBuilder.cpp
lib/glslang/glslang/glslang/MachineIndependent/: ParseHelper.cpp
lib/glslang/glslang/glslang/ResourceLimits/: resource_limits_c.cpp
lib/spirv-cross/: spirv_msl.cpp
lib/tint/: .gitignore  .gn  BUILD.gn  CMakeLists.txt  DEPS  OWNERS  README.md
lib/tint/build_overrides/: build.gni  dawn.gni  tint.gni
lib/tint/infra/config/global/: main.star
lib/tint/kokoro/linux/: docker.sh
lib/tint/kokoro/windows/: build.bat
lib/tint/scripts/: tint_overrides_with_defaults.gni
lib/tint/src/tint/: CMakeLists.txt
lib/tint/tools/: push-to-gerrit
lib/vulkan/lib/apple/MoltenVK.xcframework/: Info.plist
src/skygfx/: backend.cpp  backend.h  backend_d3d11.cpp  backend_d3d11.h  backend_d3d12.cpp  backend_d3d12.h  backend_gl.cpp  backend_gl.h  backend_gl44.cpp  backend_gl44.h  backend_mtl.cpp  backend_mtl.h  backend_vk.cpp  backend_vk.h  backend_webgpu.cpp  backend_webgpu.h  device.cpp  device.h  device_d3d11.cpp  device_d3d11.h  device_gl44.cpp  device_gl44.h  ext.cpp  ext.h  extended.cpp  extended.h  other.h  shader_compiler.cpp  shader_compiler.h  skygfx.cpp  skygfx.h  utils.cpp  utils.h  vertex.cpp  vertex.h
